--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="bg-botton"></div>
         <section class="row justify-content-center align-items-center w-100 h-100 position-absolute top-0">
             <div class="col-12 d-flex w-75 h-75 ">
-                <div class="col-1 col-sm-3 col-md-4 bg-white">
+                <div class="col-2 col-sm-3 col-md-4 bg-white">
 
                     <!-- div aside -->
 
@@ -39,27 +39,42 @@
                         </div>
                     </div>
 
-                    <!-- input search -->
+                    <!-- notifiche -->
 
                     <div class="bg-info d-flex p-2">
                         <div><i class="fas fa-bell-slash bg-white p-2"></i></div>
                         <div class="d-none d-md-block ps-1">
                             <span class="d-block">Ricevi notifiche di nuovi messaggi</span>
-                            <span class="text-decoration-underline">Attiva notifiche
+                            <span class="text-decoration-underline info-text">Attiva notifiche
                                 desktop</span>
                         </div>
-
                     </div>
+
+                    <!-- input search -->
+
                     <div class="input-group mb-3">
                         <button class="btn btn-outline-secondary" type="button" id="button-addon1"><i
                                 class="fas fa-search"></i></button>
                         <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat">
                     </div>
+
+                    <!-- contact list  -->
+
+                    <div id="list-contact" class="overflow-auto d-flex position-relative">
+                        <div>
+                            <img class="rounded-pill " src="img/avatar_1.jpg" alt="">
+                        </div>
+                        <div class="d-none d-md-block">
+                            <span class="d-none d-md-block">Michele</span>
+                            <span class="info-text">Ultimo messaggio inviato</span>
+                            <span class="info-text position-absolute top-0 end-0">12:00</span>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- div-main -->
 
-                <div class="col-11 col-sm-9 col-md-8 bg-warning">
+                <div class="col-10 col-sm-9 col-md-8 bg-warning">
                     <!-- <i class="fas fa-search"></i>
                     <i class="fas fa-ellipsis-v"></i> -->
                 </div>
