--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
                     <!-- input search -->
 
                     <div class="input-group mb-3">
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon1"><i
+                        <button class="btn btn-outline-light" type="button" id="button-addon1"><i
                                 class="fas fa-search"></i></button>
-                        <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat">
+                        <input type="text" class="form-control btn-outline-light"
+                            placeholder="Cerca o inizia una nuova chat">
                     </div>
 
                     <!-- contact list  -->
@@ -72,11 +73,27 @@
                     </div>
                 </div>
 
-                <!-- div-main -->
+                <!-- div chat -->
+                <!-- header chat -->
 
-                <div class="col-10 col-sm-9 col-md-8 bg-warning">
-                    <!-- <i class="fas fa-search"></i>
-                    <i class="fas fa-ellipsis-v"></i> -->
+                <div class="col-10 col-sm-9 col-md-8 bg_chat">
+                    <div class="header-search d-flex bg-light justify-content-between">
+                        <div class="col col-lg-7">
+                            <img class="rounded-pill " src="img/avatar_1.jpg" alt="">
+                            <span class="d-none d-md-inline-block">michele</span>
+                        </div>
+                        <div class="col py-2 text-end d-none d-md-block">
+                            <i class="fas fa-search"></i>
+                            <i class="fa-solid fa-paperclip"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                        </div>
+                    </div>
+
+                    <!-- chat -->
+
+                    <div>
+
+                    </div>
                 </div>
             </div>
         </section>
