--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="bg-botton"></div>
     <main id="app" class="container-fluid">
         <section class="row justify-content-center align-items-center w-100 h-100 position-absolute top-0">
-            <div class="col-12 d-flex w-75 h-75 ">
+            <div class="my-container d-flex w-75 h-75">
                 <div class="col-2 col-sm-3 col-md-4 bg-white border-end div-aside">
 
                     <!-- div aside -->
@@ -32,10 +32,10 @@
                             <img class="rounded-pill " src="img/avatar_io.jpg" alt="">
                             <span class="d-none d-md-inline-block">Francesca</span>
                         </div>
-                        <div class="col text-end d-none d-md-block">
+                        <div class="wrap-icons col text-end d-none d-md-block">
                             <i class="fas fa-circle-notch"></i>
-                            <i class="fas fa-comment-alt"></i>
-                            <i class="fas fa-ellipsis-v"></i>
+                            <i class="fas fa-comment-alt px-1"></i>
+                            <i class="fas fa-ellipsis-v pe-1"></i>
                         </div>
                     </div>
 
@@ -45,17 +45,17 @@
                         <div><i class="fas fa-bell-slash bg-white p-2"></i></div>
                         <div class="d-none d-md-block ps-1">
                             <span class="d-block fs-6">Ricevi notifiche di nuovi messaggi</span>
-                            <span class="text-decoration-underline info-text">Attiva notifiche
+                            <span class="text-decoration-underline info-text d-none d-md-inline-block">Attiva notifiche
                                 desktop</span>
                         </div>
                     </div>
 
                     <!-- input search -->
 
-                    <div class="input-group mb-3">
+                    <div class="input-group">
                         <button class="btn btn-outline-light" type="button" id="button-addon1"><i
                                 class="fas fa-search"></i></button>
-                        <input type="text" class="form-control btn-outline-light"
+                        <input type="text" class="form-control btn-outline-light d-none d-sm-inline-block"
                             placeholder="Cerca o inizia una nuova chat">
                     </div>
 
@@ -82,20 +82,18 @@
                 <div class="col-10 col-sm-9 col-md-8 bg_chat">
                     <div class="header-search d-flex bg-light justify-content-between align-items-center">
                         <div v-if="currentUser" class="col col-lg-7 d-flex">
-                            <img class="rounded-pill " src="'img/avatar' + element.avatar + '.jpg'" alt="">
+                            <img class="rounded-pill " :src="'img/avatar' + currentUser.avatar + '.jpg'" alt="">
                             <div class="d-inline-block d-flex flex-column">
-                                <span v-if="currentUser"
-                                    class="d-none d-md-inline-block pt-1">{{currentUser.name}}</span>
-
-                                <span v-if="currentUser" class="info-text">Ultimo accesso oggi alle 12:00</span>
-
+                                <span v-if="currentUser" class=" pt-1">{{currentUser.name}}</span>
+                                <span v-if="currentUser" class="info-text d-none d-sm-inline-block">Ultimo accesso oggi
+                                    alle 12:00</span>
                             </div>
                         </div>
-                        <h3 v-else class="d-md-inline-block p-2 text-success">WhatsApp</h3>
-                        <div class="col text-end">
+                        <h3 v-else class="p-2 text-success">WhatsApp</h3>
+                        <div class="wrap-icons col-3 text-end">
                             <i class="fas fa-search"></i>
-                            <i class="fa-solid fa-paperclip"></i>
-                            <i class="fas fa-ellipsis-v"></i>
+                            <i class="fa-solid fa-paperclip px-1"></i>
+                            <i class="fas fa-ellipsis-v pe-1"></i>
                         </div>
                     </div>
 
@@ -104,7 +102,7 @@
                     <div id="myChat" class="pt-4 px-2 d-flex flex-column overflow-auto">
                         <div class="d-inline-block p-2 rounded-3 col-5 position-relative py-4 my-1"
                             v-for="(messages,element,index) in currentUser?.messages"
-                            :class="(messages.status == 'sent') ? 'my-sent-chat , offset-6' : 'my-receveid-chat'">
+                            :class="(messages.status === 'sent') ? 'my-sent-chat , offset-6' : 'my-receveid-chat'">
                             <span>{{messages.message}}</span>
                             <span class="position-absolute bottom-0 end-0 info-text">{{messages.date}}</span>
                         </div>
@@ -117,12 +115,11 @@
                             <i class="fa-solid fa-face-smile"></i>
                         </div>
                         <input type="text" v-model="inputVal" class="form-control" placeholder="Scrivi un messaggio"
-                            @keydown.enter="addVal(inputVal,index)">
+                            @keydown.enter="addVal(inputVal)">
                         <div class="input-group-text">
                             <i class="fa-solid fa-microphone"></i>
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
